[1.1.1](feat):小优化